Prevent footer jumping around on modal dialog.
It is a result of the missing </div> tag, the position was being
determined by the body tag.

As a trade off, the footer will be no longer "sticky".
(Personally I'm OK for this type of footer)

--- a/common/style/calc.css
+++ b/common/style/calc.css
@@ -17,7 +17,6 @@ html {
 }
 
 body {
-  margin-bottom: 50px;
   background: #222 !important;
   background-image: url("../assets/img/ui/bg-primary.jpg") !important;
   overflow: hidden;
@@ -593,8 +592,6 @@ body:not(.show-focus-outlines) [tabindex]:focus {
 }
 
 .footer {
-  position:absolute;
-  bottom: 0;
   width: 100%;
   height: 50px;
   font-family: "Splat2", sans-serif;
